# vcmi

./: .gitignore  CMakeLists.txt
artool/: CMakeLists.txt  Main.cpp  Main.h
client/: CBitmapHandler.cpp  CBitmapHandler.h  CMT.cpp  CMakeLists.txt  CMessage.cpp  CMessage.h  CPlayerInterface.cpp  CVideoHandler.cpp  Graphics.cpp  Graphics.h  NetPacksClient.cpp  NetPacksLobbyClient.cpp  StdInc.h  VCMI_client.cbp  VCMI_client.vcxproj  VCMI_client.vcxproj.filters  mapHandler.cpp  mapHandler.h
client/battle/: CBattleAnimations.cpp  CBattleInterface.cpp  CBattleInterfaceClasses.cpp  CCreatureAnimation.cpp
client/gui/: CAnimation.cpp  CAnimation.h  CCursorHandler.cpp  CGuiHandler.h  CIntObject.cpp  CIntObject.h  Fonts.cpp  SDL_Extensions.cpp  SDL_Extensions.h
client/lobby/: CBonusSelection.cpp  CLobbyScreen.cpp  CLobbyScreen.h  CSelectionBase.cpp  CSelectionBase.h  OptionsTab.cpp  RandomMapTab.cpp  RandomMapTab.h  RandomMapTemplateTab.cpp  RandomMapTemplateTab.h  SelectionTab.cpp
client/mainmenu/: CCampaignScreen.cpp  CMainMenu.cpp
client/widgets/: AdventureMapClasses.cpp  Buttons.h  CArtifactHolder.cpp  Images.cpp  Images.h  MiscWidgets.cpp  TextControls.h
client/windows/: CAdvmapInterface.cpp  CCastleInterface.cpp  CHeroWindow.cpp  CQuestLog.cpp  CSpellWindow.cpp  CWindowObject.cpp  GUIClasses.cpp  InfoWindows.cpp
lib/: CBitmapHandler.cpp  CBitmapHandler.h  CMakeLists.txt  NetPacksLobby.h
lib/mapObjects/: CObjectClassesHandler.cpp
lib/rmg/: CRmgTemplateStorage.cpp
lib/sdl/: Compat.h  Extensions.cpp  Extensions.h  Geometries.cpp  Geometries.h  Pixels.h
